# lolcat

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
data/TestDetector/Data/Ikrum=1, TpxClock=16 55 Fe/: ClusterLogAll.txt
src/: Frame.hpp  Main.cpp  Pixel.hpp  TableEntryGen.cpp  TableEntryGen.hpp  TextFileReader.hpp
